server_log_8.txt
Traceback (most recent call last):
  File "C:\Users\User\OneDrive\Documents\GitHub\arifOS\arifos_core\mcp\arifos_mcp_server.py", line 39, in <module>
    from arifos_core.mcp.tools.fag_list import FAGListRequest, arifos_fag_list
  File "C:\Users\User\OneDrive\Documents\GitHub\arifOS\arifos_core\__init__.py", line 40, in <module>
    from .enforcement.metrics import Metrics, FloorsVerdict, ConstitutionalMetrics
  File "C:\Users\User\OneDrive\Documents\GitHub\arifOS\arifos_core\enforcement\__init__.py", line 14, in <module>
    from .genius_metrics import (
    ...<5 lines>...
    )
  File "<frozen importlib._bootstrap>", line 1371, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1342, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 938, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 758, in exec_module
  File "C:\Users\User\OneDrive\Documents\GitHub\arifOS\.venv\Lib\site-packages\beartype\claw\_importlib\_clawimpload.py", line 359, in get_code
    return super().get_code(fullname)
           ~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "<frozen importlib._bootstrap_external>", line 896, in get_code
  File "C:\Users\User\OneDrive\Documents\GitHub\arifOS\.venv\Lib\site-packages\beartype\claw\_importlib\_clawimpload.py", line 456, in source_to_code
    return super().source_to_code(  # type: ignore[call-arg]
           ~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^
        data=data, path=path, _optimize=_optimize)  # pyright: ignore
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\User\OneDrive\Documents\GitHub\arifOS\arifos_core\enforcement\genius_metrics.py", line 506
    \"\"\"
     ^
SyntaxError: unexpected character after line continuation character
